--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,4 +1,5 @@
 /* Select the image with a class of kitty-1 */
+<a href=".kitty-1">
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -7,7 +8,8 @@
   left: 129px;
 }
 
-/* Select the image with id of kitty-2 */
+/* Select the image with id of kitty-2 */,
+<a id ="#kitty-2">
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -17,6 +19,9 @@
 }
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
+   img{
+     #basket img
+   }
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -26,6 +31,8 @@
 }
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
+#ball + img
+   
 
 /*__write_selector_here__*/ {
   position: absolute;
@@ -35,6 +42,7 @@
 }
 
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
+img[alt="Kitty 5"]
 
 /*__write_selector_here__*/ {
   position: absolute;
